--- a/.github/workflows/dev-alpine3_17.yml
+++ b/.github/workflows/dev-alpine3_17.yml
@@ -1,12 +1,30 @@
-name: publish-alpine3_16
+name: dev-alpine3_17
 
 on:
-  release:
-    types: [published]
+  push:
+    branches: ['**']
+    tags-ignore: ['**']
   workflow_dispatch:
 
 jobs:
-  publish-alpine3_16:
+  test-alpine3_17:
+    runs-on: ubuntu-latest
+    steps:
+      -
+        name: Checkout code
+        uses: actions/checkout@v3
+      -
+        name: Checkout shUnit2
+        uses: actions/checkout@v3
+        with:
+          repository: kward/shunit2
+          ref: v2.1.8
+          path: ./shunit2
+      -
+        name: Run tests
+        run: |
+          RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
+  build-alpine3_17:
     runs-on: ubuntu-latest
     steps:
       -
@@ -16,18 +34,6 @@ jobs:
         name: Get repository name
         run: echo "REPOSITORY_NAME=$(echo '${{ github.repository }}' | awk -F '/' '{print $2}')" >> $GITHUB_ENV
         shell: bash
-      -
-        name: Read Alpine version - revision
-        uses: bfren/read-file@v2
-        with:
-          file: ./3.16/ALPINE_REVISION
-        id: alpine_revision
-      -
-        name: Read image version
-        uses: bfren/read-file@v2
-        with:
-          file: ./VERSION_MAJOR
-        id: version_major
       -
         name: Read image version
         uses: bfren/read-file@v2
@@ -65,23 +71,21 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          file: ./3.16/Dockerfile
+          file: ./3.17/Dockerfile
           build-args: |
             BF_IMAGE=${{ env.REPOSITORY_NAME }}
             BF_VERSION=${{ steps.version.outputs.contents }}
-          push: true
+          push: ${{ startsWith(github.ref, 'refs/heads/') }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64
           tags: |
-            bfren/alpine-s6:alpine3.16
-            bfren/alpine-s6:alpine3.16-${{ steps.version_major.outputs.contents }}
-            bfren/alpine-s6:alpine3.16-${{ steps.version_minor.outputs.contents }}
-            bfren/alpine-s6:alpine3.16-${{ steps.version.outputs.contents }}
-            bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine3.16
-            ghcr.io/bfren/alpine-s6:alpine3.16-${{ steps.version_major.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine3.16-${{ steps.version_minor.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine3.16-${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
+            bfren/alpine-s6:dev
+            bfren/alpine-s6:alpine3.17-dev
+            bfren/alpine-s6:alpine3.17-${{ steps.version_minor.outputs.contents }}-beta
+            bfren/alpine-s6:alpine3.17-${{ steps.version.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:dev
+            ghcr.io/bfren/alpine-s6:alpine3.17-dev
+            ghcr.io/bfren/alpine-s6:alpine3.17-${{ steps.version_minor.outputs.contents }}-beta
+            ghcr.io/bfren/alpine-s6:alpine3.17-${{ steps.version.outputs.contents }}-beta
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
