--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -26,6 +26,7 @@ jobs:
           RUN=./tests/run-git.sh && chmod +x ${RUN} && ${RUN}
   build:
     strategy:
+      fail-fast: false
       matrix:
         alpine: [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13", "3.14", "3.15", "3.16", "3.17", "edge" ]
     runs-on: ubuntu-latest
