--- a/3.8/Dockerfile
+++ b/3.8/Dockerfile
@@ -49,4 +49,7 @@ COPY ./overlay /
 
 RUN bf-install
 
-HEALTHCHECK --in
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 \
+    CMD healthcheck
+
+ENTRYPOINT [ "/init" ]
