--- a/3.15/Dockerfile
+++ b/3.15/Dockerfile
@@ -23,7 +23,7 @@ RUN case "${TARGETPLATFORM}" in \
     curl -sSL -O ${URL}-noarch.tar.xz && \
     curl -sSL -O ${URL}-noarch.tar.xz.sha256
 
-FROM bfren/alpine:alpine3.15.10-1.8.7
+FROM bfren/alpine:alpine3.15-2.0.0-beta
 COPY --from=build /log /log
 COPY --from=build /s6 /s6
 
