--- a/3.16/Dockerfile
+++ b/3.16/Dockerfile
@@ -61,5 +61,5 @@ RUN \
     # run standard bf installation executable
     bf-install
 
-HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=5 \
+HEALTHCHECK --interval=5m --timeout=10s --start-period=15s --retries=5 \
     CMD healthcheck
