--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,6 +57,13 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      -
         name: Build and push
         id: docker_build
         uses: docker/build-push-action@v5
@@ -75,6 +82,12 @@ jobs:
             bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_major.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}
       -
         name: Build and push default tags
         id: docker_build_default
@@ -93,6 +106,10 @@ jobs:
             bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
             bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:${{ steps.version.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:latest
+            ghcr.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
+            ghcr.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
