--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -82,7 +82,7 @@ jobs:
         name: Run tests
         id: docker_test
         run: |
-          docker run --rm ${{ env.TEST_TAG }} env -i nu -c "use bf test ; test"
+          docker run --entrypoint "/usr/bin/env" ${{ env.TEST_TAG }} -i nu -c "use bf test ; test"
       -
         name: Build and push
         id: docker_build
