--- a/3.20/Dockerfile
+++ b/3.20/Dockerfile
@@ -27,7 +27,7 @@ RUN \
 # STAGE 1: create final image
 #======================================================================================================================
 
-FROM bfren/alpine:alpine3.20.1-2.5.0
+FROM ghcr.io/bfren/alpine:alpine3.20.1-2.5.1
 COPY --from=build /s6 /s6
 
 LABEL org.opencontainers.image.description="Alpine base image with S6 Overlay."
