--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -61,12 +61,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Login to GitHub Container Registry
+        name: Login to Quay.io Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: quay.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.QUAY_TOKEN }}
       -
         name: Build and export
         id: docker_export
@@ -101,11 +101,11 @@ jobs:
             bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}-dev
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-dev
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-dev
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-dev
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}-dev
       -
         name: Build and push default tags
         id: docker_build_default
@@ -124,10 +124,10 @@ jobs:
             bfren/alpine-s6:${{ steps.version_major.outputs.contents }}-dev
             bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}-dev
             bfren/alpine-s6:${{ steps.version.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:dev
-            ghcr.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}-dev
-            ghcr.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:dev
+            quay.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}-dev
+            quay.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}-dev
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
