--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -57,12 +57,12 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       -
-        name: Login to GitHub Container Registry
+        name: Login to Quay.io Container Registry
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: quay.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.QUAY_TOKEN }}
       -
         name: Build and push
         id: docker_build
@@ -83,12 +83,12 @@ jobs:
             bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
             bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_major.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_major.outputs.contents }}
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version_minor.outputs.contents }}
+            quay.io/bfren/alpine-s6:alpine${{ matrix.alpine }}-${{ steps.version.outputs.contents }}
+            quay.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}
+            quay.io/bfren/alpine-s6:alpine${{ steps.alpine_revision.outputs.contents }}-${{ steps.version.outputs.contents }}
       -
         name: Build and push default tags
         id: docker_build_default
@@ -108,10 +108,10 @@ jobs:
             bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
             bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
             bfren/alpine-s6:${{ steps.version.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:latest
-            ghcr.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
-            ghcr.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}
+            quay.io/bfren/alpine-s6:latest
+            quay.io/bfren/alpine-s6:${{ steps.version_major.outputs.contents }}
+            quay.io/bfren/alpine-s6:${{ steps.version_minor.outputs.contents }}
+            quay.io/bfren/alpine-s6:${{ steps.version.outputs.contents }}
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
