--- a/3.22/Dockerfile
+++ b/3.22/Dockerfile
@@ -2,7 +2,7 @@
 # STAGE 0: download S6 overlay
 #======================================================================================================================
 
-FROM --platform=${BUILDPLATFORM} quay.io/bfren/golang:alpine AS build
+FROM --platform=${BUILDPLATFORM} alpine AS build
 ARG TARGETPLATFORM
 
 WORKDIR /s6
