--- a/3.20/Dockerfile
+++ b/3.20/Dockerfile
@@ -27,7 +27,7 @@ RUN \
 # STAGE 1: create final image
 #======================================================================================================================
 
-FROM quay.io/bfren/alpine:alpine3.20.8-3.0.0-dev
+FROM quay.io/bfren/alpine:alpine3.20.8-3.0.0
 COPY --from=build /s6 /s6
 
 LABEL org.opencontainers.image.description="Alpine base image with S6 Overlay."
