--- a/3.16/Dockerfile
+++ b/3.16/Dockerfile
@@ -27,7 +27,7 @@ RUN \
 # STAGE 1: create final image
 #======================================================================================================================
 
-FROM quay.io/bfren/alpine:alpine3.16.9-3.1.0
+FROM quay.io/bfren/alpine:alpine3.16.9-3.1.1-dev
 COPY --from=build /s6 /s6
 
 LABEL org.opencontainers.image.description="Alpine base image with S6 Overlay."
