--- a/3.22/Dockerfile
+++ b/3.22/Dockerfile
@@ -27,7 +27,7 @@ RUN \
 # STAGE 1: create final image
 #======================================================================================================================
 
-FROM quay.io/bfren/alpine:alpine3.22.2-3.1.1-dev
+FROM quay.io/bfren/alpine:alpine3.22.2-3.1.1
 COPY --from=build /s6 /s6
 
 LABEL org.opencontainers.image.description="Alpine base image with S6 Overlay."
